database planning for game catalog

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,2 @@
-vendor/
-developer-note.txt
-.env
-# Ignore all files in storage, except required .gitignore files
-/src/storage/*
-!/src/storage/.gitignore
-!/src/storage/app/
-/src/storage/app/*
-!/src/storage/app/.gitignore
-!/src/storage/app/public/
-/src/storage/app/public/*
-!/src/storage/app/public/.gitignore
-!/src/storage/framework/
-/src/storage/framework/*
-!/src/storage/framework/.gitignore
-!/src/storage/framework/cache/
-/src/storage/framework/cache/*
-!/src/storage/framework/cache/.gitignore
-!/src/storage/framework/cache/data/
-/src/storage/framework/cache/data/.gitignore
-!/src/storage/framework/sessions/.gitignore
-!/src/storage/framework/testing/.gitignore
-!/src/storage/framework/views/.gitignore
-!/src/storage/logs/.gitignore
-
-# Exclude keys (security)
-/src/storage/*.key
+/postgres-data
+/pgadmin-data
