--- a/.env
+++ b/.env
@@ -26,3 +26,6 @@ TIME_ZONE=Asia/Dubai
 # Custom exposed port mappings (optional for internal usage)
 FORWARD_DB_PORT=5434
 FORWARD_REDIS_PORT=6381
+
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
